[tool.poetry]
name = "rss-feed-editor"
version = "0.1.0"
description = ""
authors = ["Glossawy <glossawy@sphorb.email>"]
readme = "README.md"

packages = [{ include = 'feed_editor', from = 'app' }]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
flask-cors = "^4.0.0"
lxml = "^4.9.3"
httpx = "^0.25.0"
validators = "^0.22.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
lxml-stubs = "^0.5.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
